--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ h2{
   text-align: center;
 }
 .Beast-mood {
-  position: absolute;
-  left: 50%; 
+
 }
+  /*.drinkform-background {
+    background-color: #e6e6e6;
+  }*/
